# otus--githubworflow--ipparse

./: CMakeLists.txt  main.cpp  test.sh
.github/workflows/: release_manual.yml  test.yml
